Added more stuff to html.

--- a/act_edit.html
+++ b/act_edit.html
@@ -20,6 +20,11 @@
 	</div>
 
 	<div id="right_pane">
+        <div id="weapons-row"> 
+            <button id="sword">Sword</button>
+            <button id="staff">Staff</button>
+            <button id="fist">Fist</button>
+        </div>
 
 	</div>
 
