--- a/act_edit_bootstrap.html
+++ b/act_edit_bootstrap.html
@@ -101,10 +101,16 @@
                 <div class="col-sm-5">
                     
                     <!-- Weapons Group Buttons -->
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-default">Sword</button>
-                      <button type="button" class="btn btn-default">Staff</button>
-                      <button type="button" class="btn btn-default">Fist</button>
+                    <div class="btn-group btn-group-justified">
+                      <div class="btn-group">
+                          <button type="button" class="btn btn-default">Sword</button>
+                      </div>
+                      <div class="btn-group">
+                          <button type="button" class="btn btn-default">Staff</button>
+                      </div>
+                      <div class="btn-group">
+                          <button type="button" class="btn btn-default">Fist</button>
+                      </div>
                     </div>
                     
                     <!-- Add Youtube player here -->
