Added edit/ delete buttons to section 1. Need to write javascript to add them dynamically to all sections and moves.

--- a/act_edit_bootstrap.html
+++ b/act_edit_bootstrap.html
@@ -77,7 +77,16 @@
                   <ul class="list-group">
                     <li class="list-group-item">
                         Section 1
-                        <span class="glyphicon glyphicon-remove-circle"></span>
+                        
+                        <div class="pull-right" style:"padding-right:1em;">
+                            <button type="button" class="btn btn-default btn-xs">
+                              <span class="glyphicon glyphicon-pencil"></span>
+                            </button>
+                            <button type="button" class="btn btn-default btn-xs">
+                              <span class="glyphicon glyphicon-remove"></span>
+                            </button>
+                        </div>
+                        
                     </li>
                     <li class="list-group-item">Section 2</li>
                   </ul>
