Noted that uploading videos is a canned feature for now

--- a/act_edit_bootstrap.html
+++ b/act_edit_bootstrap.html
@@ -380,7 +380,7 @@
           $("#uploadButton").click(function() {
              var linkPrompt =  {
                 state0: {
-		    title: 'Upload File To Youtube',
+		    title: 'Upload File To Youtube: CANNED FEATURE FOR GR4',
                     html:'<label>File location <input type="text" name="fname" value=""></label><br />',
                     buttons: { Cancel: -1, Done: 1 },
                     focus: 1,
