--- a/act_edit_bootstrap.html
+++ b/act_edit_bootstrap.html
@@ -334,11 +334,12 @@
         Add a section.
         */
         $('#section-btn').on('click', function () {
+            $(".section.active").removeClass("active");
             var newSection = $("#add-section").val();
             var newSectionKey = makeKey(newSection);
             $("#section-list").append(
-                                '<a href="#" class="list-group-item section" id="' +
-                                 newSectionKey + '-s">' + newSection + '</a>'
+                                '<a href="#" class="list-group-item active section" id="' +
+                                 newSectionKey + '">' + newSection + '</a>'
                             );
             addListEditing(newSectionKey);
             actDictionary[newSectionKey] = null;
@@ -352,16 +353,17 @@
         TODO: How to display move title?
         */
         $('#move-btn').click(function () {
+            $('.move.active').removeClass("active");
             var newMoveTitle = $("#add-move-title").val();
             var newMoveKey = makeKey(newMoveTitle);
             
             var newMove = $("#add-move").val();
             
             $("#move-list").append(
-                                '<a href="#" class="list-group-item move" id="' +
+                                '<a href="#" class="list-group-item active move" id="' +
                                 newMoveKey + '-m">' + newMove + '</a>'
                             );
-            console.log('<a href="#" class="list-group-item move" id="' +
+            console.log('<a href="#" class="list-group-item active move" id="' +
                                 newMoveKey + '-m">' + newMove + '</a>');
             addListEditing(newMoveKey+'-m');
             var activeSection = $(".section.active").attr('id').slice(0, -2);
