--- a/acts.html
+++ b/acts.html
@@ -5,7 +5,7 @@
     <link href="bootstrap-3.1.1-dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="theme.css" rel="stylesheet">
     <link href="impromptu.css" rel="stylesheet">
-    <link href="bootstrap-select.css" rel=stylesheet">
+    <link href="bootstrap-select.css" rel="stylesheet">
 
 <style>
 /* temporary style elements, move to dedicated CSS file later */
