--- a/act_edit_bootstrap.html
+++ b/act_edit_bootstrap.html
@@ -34,8 +34,8 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <ul class="nav navbar-nav navbar-left">
                     <ol class="breadcrumb list inline">
-                      <li><a href="#">Show</a></li>
-                      <li><a href="#">Act</a></li>
+                      <li><a href="shows.html">Show</a></li>
+                      <li><a href="acts.html">Act</a></li>
                       <li class="active">Current Section</li><!-- or could be Edit -->
                     </ol>
                 </ul>
@@ -153,7 +153,7 @@
                     <!-- Add Youtube player here -->
             
                     <div class="" style="padding-top:2em;">
-                        <div class = "panel panel-primary" id = "selectWeaponPanel">
+                        <div class = "panel panel-default" id = "selectWeaponPanel">
 			   <div class="panel-heading"></div>
                            <div class="panel-body edit">
                               Add or select a weapon group first, then add a video!
@@ -164,7 +164,7 @@
 
 			</div>
 
-		        <div class= "panel-primary panel" id = "newDivPanel">
+		        <div class= "panel-default panel" id = "newDivPanel">
 			  <div class = "panel-heading"> </div>
 			   <div class = "panel-body no-edit">
 			     No video has been added for this weapon. 
@@ -595,28 +595,24 @@
           $("#selectWeaponPanel").show();
           $("#newDivPanel").hide();
           $("#vidPanel").hide();
-        } else{
-        var videoURL = actDictionary[currentSection][currentMove][1][currentWeapon];
-        if (videoURL == null) {
-          $("#selectWeaponPanel").hide();
-          $("#newDivPanel").show();
-          $("#vidPanel").hide();
-
-
         } else {
-          $("#selectWeaponPanel").hide();
-          $("#newDivPanel").hide();
-          console.log(videoURL);
-          $("#youtubePlugin").attr('src',videoURL);
-          $("#vidPanel").show();
-
+          var videoURL = actDictionary[currentSection][currentMove][1][currentWeapon];
+          if (videoURL == null) {
+            $("#selectWeaponPanel").hide();
+            $("#newDivPanel").show();
+            $("#vidPanel").hide();
+          } else {
+            $("#selectWeaponPanel").hide();
+            $("#newDivPanel").hide();
+            console.log(videoURL);
+            $("#youtubePlugin").attr('src',videoURL);
+            $("#vidPanel").show();
+          }
         }
-        }
-      var addLink = function() {
-        $.prompt("HelloWorld");
-      }
-      
+        var addLink = function() { $.prompt("HelloWorld"); }
       };
+
+
       /*Weapons group handling */
       var populateWeaponList = function(section, move) {
           console.log('current section: ', currentSection, ' and move: ', currentMove);
@@ -734,7 +730,7 @@
                     buttons: { Cancel: -1, Done: 1 },
                     focus: 1,
                     submit:function(e,v,m,f){ 
-                        if (f.fname != "") {      
+                        if (f.fname != "" && v==1) {      
                             embedID = getId(f.fname);
                             embedURL = "http://www.youtube.com/embed/"+embedID;
                             actDictionary[currentSection][currentMove][1][currentWeapon] =embedURL;
@@ -758,7 +754,7 @@
                     buttons: { Cancel: -1, Done: 1 },
                     focus: 1,
                     submit:function(e,v,m,f){ 
-                        if (f.fname != "") {      
+                        if (f.fname != "" && v==1) {      
                             embedID = getId("https://www.youtube.com/watch?v=sJgDYdA8dio"); //CANNED
                             embedURL = "http://www.youtube.com/embed/" + embedID;
                             actDictionary[currentSection][currentMove][1][currentWeapon] =embedURL;
