Fixed link to better link

--- a/acts.html
+++ b/acts.html
@@ -192,7 +192,7 @@
                                 if (editing) {
                                     $("#"+UID).remove();
                                 } else {
-                                    window.location.href = "act_edit_bootstrap.html";
+                                    window.location.href = "act_edit_bootstrap.html?#";
                                 }
                             });
 
