shows page theme and edit tools modified to look more like main app, shows can now be edited and updated locally but does not persist in the absence of a real database

--- a/act_edit_bootstrap.html
+++ b/act_edit_bootstrap.html
@@ -256,7 +256,7 @@
         /* Add edit and delete icons for each list element. They serve as buttons. */
         var addListEditing = function(id) {
           var pencilID = id+"-pencil";
-          var removeID = id+"-remove"
+          var removeID = id+"-remove";
             $("#"+id).append(
             '<div class="pull-right edit">' +
             '<span class="glyphicon glyphicon-pencil" id="' + pencilID +'" style="padding-right:0.5em;"></span>' +
