--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -132,7 +132,7 @@
             {{#if editing_section}}
 
             {{else}}
-              <a class="list-group-item section" id="' + {{name}} + '-s"> <b> {{name}} </a>
+              <a class="list-group-item section" id="{{name}} + '-s"> {{name}} </a>
             {{/if}}
           {{/each}}
         {{/unless}}
@@ -173,8 +173,8 @@
       <div class="list-group" id="move-list">
       {{#unless no_moves}}
         {{#each moves}}
-          {{if #editing_move}}
-            <form class="form-horizontal" id ="'+  targetID+"-form" + '" role="form">
+          {{#if editing_move}}
+            <form class="form-horizontal" id ="{{key}}-form" role="form">
                 <div class="form-group edit" style="padding-top:0.5em;">
                   <label for="update-move-title" class="col-sm-2 control-label">Title</label>
                    <div class="col-sm-10"> 
@@ -191,10 +191,10 @@
                   <div class="col-sm-offset-5">
                       <button type="submit" class="btn btn-default update-btn update-move-btn" id="{{key}}"> Update</button>
                   </div>
-               '</div>' +
-            '</form>
+               </div>
+            </form>
           {{else}}
-            <a class="list-group-item move" id=" {{key}}-m"> <b> {{key}} </b><br> {{data}}</a>
+            <a class="list-group-item move" id="{{key}}-m"> <b> {{key}} </b><br> {{data}}</a>
           {{/if}}
         {{/each}}
       {{/unless}}
