Redoing some templating for sections and moves

--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -132,7 +132,7 @@
             {{#if editing_section}}
 
             {{else}}
-              <a class="list-group-item section" id="{{name}} + '-s"> {{name}} </a>
+              <a class="list-group-item section" id="{{name}}-s"> {{name}} </a>
             {{/if}}
           {{/each}}
         {{/unless}}
