--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -174,7 +174,7 @@
       {{#unless no_moves}}
         {{#each moves}}
           {{#if editing_move}}
-            <form class="form-horizontal" id ="{{key}}-form" role="form">
+            <form class="form-horizontal" id ="{{name}}-form" role="form">
                 <div class="form-group edit" style="padding-top:0.5em;">
                   <label for="update-move-title" class="col-sm-2 control-label">Title</label>
                    <div class="col-sm-10"> 
@@ -189,12 +189,12 @@
                 </div>         
                 <div class="form-group edit">
                   <div class="col-sm-offset-5">
-                      <button type="submit" class="btn btn-default update-btn update-move-btn" id="{{key}}"> Update</button>
+                      <button type="submit" class="btn btn-default update-btn update-move-btn" id="{{name}}"> Update</button>
                   </div>
                </div>
             </form>
           {{else}}
-            <a class="list-group-item move" id="{{key}}-m"> <b> {{key}} </b><br> {{data}}</a>
+            <a class="list-group-item move" id="{{name}}-m"> {{name}} </a>
           {{/if}}
         {{/each}}
       {{/unless}}
