--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -107,7 +107,7 @@
                     Add Song<input type="file" multiple>
                 </span>
             </span>
-            <input type="text" class="form-control" readonly>
+            <input type="text" class="form-control" placeholder="Browse..." disabled>
         </div>
         
     </div>
