--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -219,7 +219,7 @@
   
 
 <template name="display_move">
-  <a class="list-group-item move" id="{{name}}-m"> <b>{{name}}</b> 
+  <a class="list-group-item move {{maybe_active}}" id="{{name}}-m"> <b>{{name}}</b> 
   {{#if edit_mode}}
     <div class="pull-right edit">
       <span class="glyphicon glyphicon-pencil" id="{{name}}-m-pencil" style="padding-right:0.5em;"></span>
