Can now update a section, although currently with a canned name. I need to figure out how to get the user-supplied name from the site and use it.

--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -171,7 +171,7 @@
 
 <template name="update_section">
   <div class="input-group edit" id="{{name}}-form">
-    <input type="text" id="update-section" class="form-control">
+    <input type="text" id="update-section" class="form-control" placeholder="{{name}}">
      <span class="input-group-btn">
       <button class="btn btn-default update-btn update-section-btn" id = "{{name}}" type="button">Update</button>
     </span>      
